1.添加版本管理插件 2.优化字段编码翻译名称功能 3.优化redis的key定义规范 4.优化前端删除提示语 5.更新Springboot版本为2.7.18 6.将验证码、短信发送功能移入zerosx-resource服务 7.修复客户端前端维护遗留BUG 8.集成美团分布式ID生成方案 9.补全逻辑：用户和运营商非正常状态下无法操作任何数据 10.重新整理文档和组件部署文档并定义版本号为1.0.0(JDK8系列的版本，以后迭代版本号是1.x.x的规范都是JDK8)