@@ -5,36 +5,42 @@
 
     <groupId>com.zerosx.cloud</groupId>
     <artifactId>zerosx-cloud</artifactId>
-    <name>zerosx-cloud</name>
-    <version>0.0.4</version>
+    <version>${revision}</version>
     <packaging>pom</packaging>
 
+    <name>zerosx-cloud</name>
+    <url>https://github.com/javacctvnews/zerosx-cloud</url>
+    <description>Zerosx Cloud多租户开发平台</description>
+
     <modules>
-        <!--<module>zerosx-auth</module>-->
+        <module>zerosx-auth</module>
         <module>zerosx-gateway</module>
         <module>zerosx-commons</module>
         <module>zerosx-modules</module>
         <module>zerosx-examples</module>
         <module>zerosx-api</module>
-        <module>zerosx-sas</module>
         <module>zerosx-tools</module>
     </modules>
 
     <properties>
-        <java.version>17</java.version>
+        <revision>1.0.0</revision>
+        <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
 
-        <spring-boot.version>3.1.5</spring-boot.version>
-        <spring-cloud-alibaba.version>2022.0.0.0</spring-cloud-alibaba.version>
-        <spring-cloud.version>2022.0.4</spring-cloud.version>
-        <spring-boot-admin-starter-server.version>3.1.5</spring-boot-admin-starter-server.version>
+        <spring-boot.version>2.7.18</spring-boot.version>
+        <spring-cloud-alibaba.version>2021.0.5.0</spring-cloud-alibaba.version>
+        <spring-cloud.version>2021.0.8</spring-cloud.version>
+        <spring-boot-admin-starter-server.version>2.7.14</spring-boot-admin-starter-server.version>
 
         <mybatis-plus-boot-starter.version>3.5.3.1</mybatis-plus-boot-starter.version>
         <mysql-connector-java.version>8.0.33</mysql-connector-java.version>
+        <druid-spring-boot-starter.version>1.2.6</druid-spring-boot-starter.version>
+        <mybatis-spring-boot-starter.version>2.2.2</mybatis-spring-boot-starter.version>
+        <pagehelper.version>5.3.3</pagehelper.version>
         <mybatis-plus.version>3.5.3.1</mybatis-plus.version>
         <mybatis.version>3.5.10</mybatis.version>
         <bcprov-jdk15to18.version>1.75</bcprov-jdk15to18.version>
@@ -42,10 +48,15 @@
         <commons-io.version>2.12.0</commons-io.version>
         <commons-collections4.verison>4.4</commons-collections4.verison>
 
+        <nacos.client.version>1.4.6</nacos.client.version>
+
+        <spring-security-jwt.version>1.1.1.RELEASE</spring-security-jwt.version>
+        <spring-security-oauth2.version>2.5.2.RELEASE</spring-security-oauth2.version>
+
         <fastjson.version>1.2.83</fastjson.version>
         <transmittable-thread-local.version>2.14.2</transmittable-thread-local.version>
         <hutool.version>5.8.21</hutool.version>
-        <redisson.version>3.24.3</redisson.version>
+        <redisson.version>3.18.0</redisson.version>
         <easyexcel.version>3.3.2</easyexcel.version>
         <reflectasm.version>1.11.9</reflectasm.version>
         <easyCaptcha.version>1.6.2</easyCaptcha.version>
@@ -60,8 +71,9 @@
         <reflections.version>0.10.2</reflections.version>
         <cglib.version>3.3.0</cglib.version>
 
-        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+        <spring-cloud-starter-oauth2.version>2.2.5.RELEASE</spring-cloud-starter-oauth2.version>
 
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -107,15 +119,11 @@
             <dependency>
                 <groupId>com.zerosx.cloud</groupId>
                 <artifactId>zerosx-common-bom</artifactId>
-                <version>0.0.4</version>
+                <version>${revision}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            <dependency>
-                <groupId>org.apache.httpcomponents</groupId>
-                <artifactId>httpclient</artifactId>
-                <version>4.5.14</version>
-            </dependency>
+
             <!--feign api-->
             <dependency>
                 <groupId>com.zerosx.cloud</groupId>
@@ -144,6 +152,16 @@
                 <artifactId>spring-boot-admin-starter-server</artifactId>
                 <version>${spring-boot-admin-starter-server.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.security.oauth</groupId>
+                <artifactId>spring-security-oauth2</artifactId>
+                <version>${spring-security-oauth2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-jwt</artifactId>
+                <version>${spring-security-jwt.version}</version>
+            </dependency>
             <!-- mybatis-plus start -->
             <dependency>
                 <groupId>com.baomidou</groupId>
@@ -156,16 +174,16 @@
                 <version>${mybatis-plus-boot-starter.version}</version>
             </dependency>
             <dependency>
-                <groupId>com.baomidou</groupId>
-                <artifactId>dynamic-datasource-spring-boot3-starter</artifactId>
-                <version>4.2.0</version>
-            </dependency>
-
-            <dependency>
                 <groupId>org.bouncycastle</groupId>
                 <artifactId>bcprov-jdk15to18</artifactId>
                 <version>${bcprov-jdk15to18.version}</version>
             </dependency>
+            <!--<dependency>
+                <groupId>com.github.pagehelper</groupId>
+                <artifactId>pagehelper</artifactId>
+                <version>${pagehelper.version}</version>
+            </dependency>-->
+            <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
             <dependency>
                 <groupId>com.mysql</groupId>
                 <artifactId>mysql-connector-j</artifactId>
@@ -224,6 +242,11 @@
                 <version>${redisson.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-oauth2</artifactId>
+                <version>${spring-cloud-starter-oauth2.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.reflections</groupId>
                 <artifactId>reflections</artifactId>
                 <version>${reflections.version}</version>
@@ -274,6 +297,23 @@
                 <nacos.username>nacos</nacos.username>
                 <nacos.password>nacos</nacos.password>
             </properties>
+            <!--<activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>-->
+        </profile>
+        <profile>
+            <id>dev_1.x</id>
+            <properties>
+                <!-- 环境标识，需要与配置文件的名称相对应 -->
+                <project>local</project>
+                <profiles.active>local</profiles.active>
+                <nacos.server>127.0.0.1:8848</nacos.server>
+                <nacos.namespace>41915057-75a5-4ed3-92f9-048054782085</nacos.namespace>
+                <nacos.config.group>local</nacos.config.group>
+                <nacos.discovery.group>local</nacos.discovery.group>
+                <nacos.username>nacos</nacos.username>
+                <nacos.password>nacos</nacos.password>
+            </properties>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
@@ -283,7 +323,7 @@
             <properties>
                 <project>prod</project>
                 <profiles.active>prod</profiles.active>
-                <nacos.server>120.79.168.154:8848</nacos.server>
+                <nacos.server>172.19.54.164:8848</nacos.server>
                 <nacos.namespace>477f012f-f553-4754-bf64-ee0db8907b8e</nacos.namespace>
                 <nacos.config.group>prod</nacos.config.group>
                 <nacos.discovery.group>prod</nacos.discovery.group>
@@ -334,6 +374,32 @@
                     </execution>
                 </executions>
             </plugin>-->
+            <!-- 统一版本号管理 -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>flatten-maven-plugin</artifactId>
+                <version>1.3.0</version>
+                <configuration>
+                    <updatePomFile>true</updatePomFile>
+                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>flatten</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>flatten</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>flatten.clean</id>
+                        <phase>clean</phase>
+                        <goals>
+                            <goal>clean</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
         <pluginManagement>
             <plugins>
@@ -343,25 +409,16 @@
                     <version>${spring-boot.version}</version>
                 </plugin>
                 <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-jar-plugin</artifactId>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <configuration>
-                        <source>${java.version}</source>
-                        <target>${java.version}</target>
+                        <source>${maven.compiler.source}</source>
+                        <target>${maven.compiler.target}</target>
                         <encoding>${project.build.sourceEncoding}</encoding>
                         <compilerArgument>-Xlint:unchecked</compilerArgument>
-                        <compilerArguments>
-                            <extdirs>libs</extdirs>
-                            <bootclasspath>${java.home}/lib/rt.jar${path.separator}${java.home}/lib/jce.jar
-                            </bootclasspath>
-                        </compilerArguments>
                         <compilerArgs>
-                            <arg>--add-exports=java.base/sun.net.util=ALL-UNNAMED</arg>
-                            <arg>--add-exports=java.base/java.lang=ALL-UNNAMED</arg>
+                            <!--<extdirs>libs</extdirs>-->
+                            <!--<bootclasspath>${java.home}/lib/rt.jar${path.separator}${java.home}/lib/jce.jar
+                            </bootclasspath>-->
                         </compilerArgs>
                     </configuration>
                 </plugin>
@@ -373,6 +430,7 @@
                 </plugin>-->
             </plugins>
         </pluginManagement>
+
     </build>
 
 
